k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: description-evaluator
  labels:
    name: description-evaluator
    app: description-evaluator
